--- a/oehealth_idn/report/implementasi_keperawatan_report.xml
+++ b/oehealth_idn/report/implementasi_keperawatan_report.xml
@@ -41,7 +41,7 @@ th, td {
                                 <tr class="border">
                                     <td>Ruang</td>
                                     <td> : </td>
-                                    <td></td>
+                                    <td><span t-field="o.room_id_name" /></td>
                                 </tr>
                             </table>
                             <br />
