--- a/oehealth_idn/views/registration_view.xml
+++ b/oehealth_idn/views/registration_view.xml
@@ -60,6 +60,7 @@
                                 <field name="company" placeholder="Company" domain="[('is_company','=',True), ('customer','=',True)]" attrs="{'invisible': [('payment','!=','Corporate')], 'required': [('payment','=','Corporate')], 'readonly': [('state','not in',('Draft'))]}" class="oe_inline" nolabel="1"/>
                                 <field name="insurance" placeholder="Insurance" domain="[('patient','=', patient)]" attrs="{'invisible': [('payment','!=','Insurance')], 'required': [('payment','=','Insurance')], 'readonly': [('state','not in',('Draft'))]}" class="oe_inline" nolabel="1"/>
                                 <field name="employee_id" placeholder="Employee"  attrs="{'invisible': [('payment','!=','Employee')], 'required': [('payment','=','Employee')], 'readonly': [('state','not in',('Draft'))]}" class="oe_inline" nolabel="1"/>
+                                <field name="detail_payment_guarantor"/>
                             </div>
                             <field name="payment_guarantor_discount_id" force_save="1"/>
                         </group>
