--- a/oehealth_idn/report/implementasi_keperawatan_report.xml
+++ b/oehealth_idn/report/implementasi_keperawatan_report.xml
@@ -3,67 +3,67 @@
     <template id="report_implementasi_keperawatan">
         <t t-call="report.html_container">
             <t t-call="report.external_layout">
-                <t t-foreach="docs" t-as="o">
-                    <div class="page">
-                        <style>
+                <div class="page">
+                    <style>
 
-th, td {
-  padding: 5px;
-}
-.border{
-    border: 1px solid black;
-}
-</style>
-                        <div class="oe_structure">
-                            <h2 style="text-align:center;">IMPLEMENTASI KEPERAWATAN</h2>
+                        th, td {
+                        padding: 5px;
+                        }
+                        .border{
+                            border: 1px solid black;
+                        }
+                    </style>
+                    <div class="oe_structure">
+                        <h2 style="text-align:center;">IMPLEMENTASI KEPERAWATAN</h2>
 
-                            <table style="width:100%">
-                                <tr class="border">
-                                    <td>No.RM</td>
-                                    <td> : </td>
-                                    <td><span t-field="o.patient.medical_record" /></td>
-                                </tr>
-                                <tr class="border">
-                                    <td>Nama Pasien</td>
-                                    <td> : </td>
-                                    <td><span t-field="o.patient.name" /></td>
-                                </tr>
-                                <tr class="border">
-                                    <td>Tanggal Lahir </td>
-                                    <td> : </td>
-                                    <td><span t-field="o.patient.dob" t-field-options='{"format": "d MMMM y"}' /></td>
-                                </tr>
-                                <tr class="border">
-                                    <td>DPJP</td>
-                                    <td> : </td>
-                                    <td><span t-field="o.doctor" /></td>
-                                </tr>
-                                <tr class="border">
-                                    <td>Ruang</td>
-                                    <td> : </td>
-                                    <td><span t-field="o.room_id_name" /></td>
-                                </tr>
-                            </table>
-                            <br />
-                            <br />
-                            <br />
-                            <table style="width:100%">
+                        <!-- <table style="width:100%">
+                            <tr class="border">
+                                <td>No.RM</td>
+                                <td> : </td>
+                                <td><span t-field="o.patient.medical_record" /></td>
+                            </tr>
+                            <tr class="border">
+                                <td>Nama Pasien</td>
+                                <td> : </td>
+                                <td><span t-field="o.patient.name" /></td>
+                            </tr>
+                            <tr class="border">
+                                <td>Tanggal Lahir </td>
+                                <td> : </td>
+                                <td><span t-field="o.patient.dob" t-field-options='{"format": "d MMMM y"}' /></td>
+                            </tr>
+                            <tr class="border">
+                                <td>DPJP</td>
+                                <td> : </td>
+                                <td><span t-field="o.doctor" /></td>
+                            </tr>
+                            <tr class="border">
+                                <td>Ruang</td>
+                                <td> : </td>
+                                <td><span t-field="o.bed.name" /></td>
+                            </tr>
+                        </table> -->
+                        <br />
+                        <br />
+                        <br />
+                        <table style="width:100%">
+                            <tr>
+                                <th class="border">Hari/TGL</th>
+                                <th class="border">Jam</th>
+                                <th class="border">Tindakan</th>
+                                <th class="border">Paraf ( Bubuhkan, Stempel, Nama, Paraf, Tanggal, Jam )</th>
+                            </tr>
+                            <t t-foreach="sale_order_list" t-as="s">
                                 <tr>
-                                    <th class="border">Hari/TGL</th>
-                                    <th class="border">Jam</th>
-                                    <th class="border">Tindakan</th>
-                                    <th class="border">Paraf ( Bubuhkan, Stempel, Nama, Paraf, Tanggal, Jam )</th>
+                                    <td class="border"><span t-field="s.tanggal" /></td>
+                                    <td class="border"><span t-field="s.tanggal" t-field-options='{"format": "H:M:S"}'/></td>
+                                    <td class="border"><span t-field="s.tujuan" /></td>
+                                    <td class="border"><span t-field="s.doctor_name" /></td>
                                 </tr>
-                                <tr>
-                                    <td class="border"></td>
-                                    <td class="border"></td>
-                                    <td class="border"></td>
-                                    <td class="border"></td>
-                                </tr>
-                            </table>
-                        </div>
+                            </t>
+                        </table>
                     </div>
-                </t>
+                </div>
             </t>
         </t>
     </template>
